--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<img
-			src="assets/images/ff6347-icon-512x512.webp"
-			alt="A square icon with rounded corners. Inside is a geometric design featuring a white square frame containing a black and gray diagonal split, with a smaller white square in the center where the diagonal lines meet."
-		/>
-		<script src="index.js"></script>
+		
+		<main>
+			<ul>
+				<li><a href="final-motions/behind/index.html"> behind</a></li>
+				<li><a href="final-motions/in-front/index.html"> infront</a></li>
+				<li><a href="final-motions/in-front-of/index.html"> infront of</a></li>
+				<li><a href="final-motions/motion-apart/index.html"> apart</a></li>
+				<li><a href="final-motions/towards-each-other-2/index.html"> towards each other</a></li>
+			</ul>
+		</main>
 	</body>
+
+
 </html>
